Clase 09 Conexion a BD

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /EstructurasDeDatos/nbproject/private/
 /EstructurasDeDatos/build/
 /Excepciones/target/
+/Clase09/nbproject/private/
+/Clase09/build/
